completed basic styles and layout for .sec-contact. Reviewed "mobile landscape" styles for this section and previous sections to ensure proper spacing

--- a/styles/_sec-contact.scss
+++ b/styles/_sec-contact.scss
@@ -67,11 +67,17 @@ border: 1px solid red; //debug only
             } // end Email-icon-cta
            
             #{$self}__email-address {
-                margin: 1em auto;
+                margin: 1.5em auto;
                 font-style: normal;
                 font-weight: bold;
                 letter-spacing: 0.3rem;
-                // text-transform: uppercase;
+
+                @include breakPoint(640px) {
+                    // Mobile Landscape
+                    font-size: 1.5rem;
+                    font-weight: 600;
+
+                }
             } // End email-address
         } // End Email Container
         
@@ -123,6 +129,12 @@ border: 1px solid red; //debug only
                 margin: 1em auto;
                 font-weight: bold;
                 letter-spacing: 0.3rem;
+
+                @include breakPoint(640px) {
+                    // Mobile Landscape
+                    font-size: 1.5rem;
+                    font-weight: 600;
+                }
             }
 
 
@@ -134,7 +146,7 @@ border: 1px solid red; //debug only
 
             #{$self}__icon {
               font-size: 2.5rem;
-              margin: 0.6rem;
+              margin: 0.6rem 1.5rem;
               padding: 10px;
             }
 
