--- a/styles/style.css
+++ b/styles/style.css
@@ -378,12 +378,24 @@ body, h2 {
 }
 
 .sec-main__header .sec-main__header-brand {
-  margin-right: 60px;
+  padding-right: 60px;
   text-align: left;
+}
+
+@media only screen and (min-width: 640px) {
+  .sec-main__header .sec-main__header-brand {
+    padding-left: 20px;
+  }
 }
 
 .sec-main__header .sec-main__header-brand .sec-main__header-avatar {
   display: none;
+}
+
+@media only screen and (min-width: 640px) {
+  .sec-main__header .sec-main__header-nav {
+    padding-right: 20px;
+  }
 }
 
 .sec-main__header .sec-main__header-nav .sec-main__header-nav-menu-icon {
@@ -459,6 +471,12 @@ body, h2 {
   letter-spacing: 1px;
   text-align: justify;
   padding: 20px 0;
+}
+
+@media only screen and (min-width: 640px) {
+  .sec-main__about .sec-main__about-me {
+    padding: 20px 20px;
+  }
 }
 
 .sec-main__aside {
@@ -728,10 +746,17 @@ body, h2 {
 }
 
 .sec-contact__footer .sec-contact__email-container .sec-contact__email-address {
-  margin: 1em auto;
+  margin: 1.5em auto;
   font-style: normal;
   font-weight: bold;
   letter-spacing: 0.3rem;
+}
+
+@media only screen and (min-width: 640px) {
+  .sec-contact__footer .sec-contact__email-container .sec-contact__email-address {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
 }
 
 .sec-contact__footer .sec-contact__phone-container {
@@ -796,6 +821,13 @@ body, h2 {
   letter-spacing: 0.3rem;
 }
 
+@media only screen and (min-width: 640px) {
+  .sec-contact__footer .sec-contact__phone-container .sec-contact__phone-num {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+}
+
 .sec-contact__footer .sec-contact__social-media {
   width: 100%;
   text-align: center;
@@ -803,7 +835,7 @@ body, h2 {
 
 .sec-contact__footer .sec-contact__social-media .sec-contact__icon {
   font-size: 2.5rem;
-  margin: 0.6rem;
+  margin: 0.6rem 1.5rem;
   padding: 10px;
 }
 
